修改ghh代码bug和跳转

--- a/hui.html
+++ b/hui.html
@@ -3,13 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>index</title>
-    <link rel="stylesheet" href="css/iconfont/iconfont.css">
+    <link rel="stylesheet" href="css/login/iconfont/iconfont.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/iconfont/index.css">
-    <link rel="stylesheet" href="css/iconfot/swiper.min.css">
-    <link rel="stylesheet" href="css/iconfont/banner.css">
-    <link rel="stylesheet" href="css/normalize.min.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/login/iconfont/index.css">
+    <link rel="stylesheet" href="css/login/iconfont/banner.css">
+    <link rel="stylesheet" href="css/login/normalize.min.css">
+    <link rel="stylesheet" href="css/login/style.css">
 </head>
 <body>
 
@@ -18,21 +17,21 @@
       <header class="headerWrap">
         <div class="header">
           <div class="headerLeft">
-            <a href="javascript:;"><img src="img/index/facebook.png" alt=""></a>
-            <a href="javascript:;"><img src="img/index/instagram.png" alt=""></a>
-            <a href="javascript:;"><img src="img/index/twitter.png" alt=""></a>
+            <a href="list.html"><img src="img/index/facebook.png" alt=""></a>
+            <a href="list.html"><img src="img/index/instagram.png" alt=""></a>
+            <a href="list.html"><img src="img/index/twitter.png" alt=""></a>
           </div>
           <h1 class="logo">
-            <a href="javascript:;">
+            <a href="index.html">
               <img src="img/index/logo.png" alt="">
             </a>
           </h1>
           <div class="headerRight">
             <ul class="register">
-              <li><a class="iconfont icon-gerenzhongxin-xuanzhong" href="javascript:;"></a></li>
-              <li><a class="iconfont icon-zhuce" href="javascript:;"></a></li>
-              <li><a class="iconfont icon-xianchangren" href="javascript:;"></a></li>
-              <li><a class="iconfont icon-gouwuche" href="javascript:;"></a></li>
+              <li><a class="iconfont icon-gerenzhongxin-xuanzhong" href="myPage.html"></a></li>
+              <li><a class="iconfont icon-zhuce" href="list.html"></a></li>
+              <li><a class="iconfont icon-xianchangren" href="list.html"></a></li>
+              <li><a class="iconfont icon-gouwuche" href="list.html"></a></li>
             </ul>
             <div class="search_input">
               <i class="fa fa-search" id="i-advanced-search-i"></i>
@@ -45,31 +44,31 @@
       <nav class="navWrap">
         <ul class="navList">
           <li class="navItem">
-            <a class="text" href="javascript:;">LIVING ROOM</a>
+            <a class="text" href="list.html">LIVING ROOM</a>
             <ul class="itemCon">
               <li class="itemConText">
-                <a href="javascript:;">Sofa</a>
-                <a href="javascript:;">Table</a>
-                <a href="javascript:;">TV cabinet</a>
-                <a href="javascript:;">Curtain</a>
-                <a href="javascript:;">Ornament</a>
+                <a href="list.html">Sofa</a>
+                <a href="list.html">Table</a>
+                <a href="list.html">TV cabinet</a>
+                <a href="list.html">Curtain</a>
+                <a href="list.html">Ornament</a>
               </li>
               <li class="itemConImg">
-                <a href="javascript:;">
+                <a href="list.html">
                   <img src="img/index/itemcon1.jpg" alt="">
                   <span>view details</span>
                   <div class="mask"></div>
                 </a>
               </li>
               <li class="itemConImg">
-                <a href="javascript:;">
+                <a href="list.html">
                   <img src="img/index/itemcon2.jpg" alt="">
                   <span>view details</span>
                   <div class="mask"></div>
                 </a>
               </li>
               <li class="itemConImg">
-                <a href="javascript:;">
+                <a href="list.html">
                   <img src="img/index/itemcon3.jpg" alt="">
                   <span>view details</span>
                   <div class="mask"></div>
@@ -78,31 +77,31 @@
             </ul>
           </li>
           <li class="navItem">
-            <a class="text" href="javascript:;">BED ROOM</a>
+            <a class="text" href="list.html">BED ROOM</a>
             <ul class="itemCon">
               <li class="itemConText">
-                <a href="javascript:;">Bed</a>
-                <a href="javascript:;">Drawers</a>
-                <a href="javascript:;">Mattress</a>
-                <a href="javascript:;">Night table</a>
-                <a href="javascript:;">Dressing</a>
+                <a href="list.html">Bed</a>
+                <a href="list.html">Drawers</a>
+                <a href="list.html">Mattress</a>
+                <a href="list.html">Night table</a>
+                <a href="list.html">Dressing</a>
               </li>
               <li class="itemConImg">
-                <a href="javascript:;">
+                <a href="list.html">
                   <img src="img/index/itemcon4.jpg" alt="">
                   <span>view details</span>
                   <div class="mask"></div>
                 </a>
               </li>
               <li class="itemConImg">
-                <a href="javascript:;">
+                <a href="list.html">
                   <img src="img/index/itemcon5.jpg" alt="">
                   <span>view details</span>
                   <div class="mask"></div>
                 </a>
               </li>
               <li class="itemConImg">
-                <a href="javascript:;">
+                <a href="list.html">
                   <img src="img/index/itemcon6.jpg" alt="">
                   <span>view details</span>
                   <div class="mask"></div>
@@ -111,31 +110,31 @@
             </ul>
           </li>
           <li class="navItem">
-            <a class="text" href="javascript:;">KITCHEN</a>
+            <a class="text" href="list.html">KITCHEN</a>
             <ul class="itemCon">
               <li class="itemConText">
-                <a href="javascript:;">Cabinet</a>
-                <a href="javascript:;">Cupboard</a>
-                <a href="javascript:;">Dining table</a>
-                <a href="javascript:;">Dish rack</a>
-                <a href="javascript:;">Lighting</a>
+                <a href="list.html">Cabinet</a>
+                <a href="list.html">Cupboard</a>
+                <a href="list.html">Dining table</a>
+                <a href="list.html">Dish rack</a>
+                <a href="list.html">Lighting</a>
               </li>
               <li class="itemConImg">
-                <a href="javascript:;">
+                <a href="list.html">
                   <img src="img/index/itemcon12.jpg" alt="">
                   <span>view details</span>
                   <div class="mask"></div>
                 </a>
               </li>
               <li class="itemConImg">
-                <a href="javascript:;">
+                <a href="list.html">
                   <img src="img/index/itemcon7.jpg" alt="">
                   <span>view details</span>
                   <div class="mask"></div>
                 </a>
               </li>
               <li class="itemConImg">
-                <a href="javascript:;">
+                <a href="list.html">
                   <img src="img/index/itemcon9.jpg" alt="">
                   <span>view details</span>
                   <div class="mask"></div>
@@ -144,31 +143,31 @@
             </ul>
           </li>
           <li class="navItem">
-            <a class="text" href="javascript:;">BATHROOM</a>
+            <a class="text" href="list.html">BATHROOM</a>
             <ul class="itemCon">
               <li class="itemConText">
-                <a href="javascript:;">Bathtub</a>
-                <a href="javascript:;">Vanity table</a>
-                <a href="javascript:;">Mat</a>
-                <a href="javascript:;">Curtain</a>
-                <a href="javascript:;">Shower</a>
+                <a href="list.html">Bathtub</a>
+                <a href="list.html">Vanity table</a>
+                <a href="list.html">Mat</a>
+                <a href="list.html">Curtain</a>
+                <a href="list.html">Shower</a>
               </li>
               <li class="itemConImg">
-                <a href="javascript:;">
+                <a href="list.html">
                   <img src="img/index/itemcon10.jpg" alt="">
                   <span>view details</span>
                   <div class="mask"></div>
                 </a>
               </li>
               <li class="itemConImg">
-                <a href="javascript:;">
+                <a href="list.html">
                   <img src="img/index/itemcon11.jpg" alt="">
                   <span>view details</span>
                   <div class="mask"></div>
                 </a>
               </li>
               <li class="itemConImg">
-                <a href="javascript:;">
+                <a href="list.html">
                   <img src="img/index/itemcon12.jpg" alt="">
                   <span>view details</span>
                   <div class="mask"></div>
@@ -177,31 +176,31 @@
             </ul>
           </li>
           <li class="navItem">
-            <a class="text" href="javascript:;">STUDY ROOM</a>
+            <a class="text" href="list.html">STUDY ROOM</a>
             <ul class="itemCon">
               <li class="itemConText">
-                <a href="javascript:;">Bookcase</a>
-                <a href="javascript:;">Table lamp</a>
-                <a href="javascript:;">Desk</a>
-                <a href="javascript:;">Divan</a>
-                <a href="javascript:;">Cothes rail</a>
+                <a href="list.html">Bookcase</a>
+                <a href="list.html">Table lamp</a>
+                <a href="list.html">Desk</a>
+                <a href="list.html">Divan</a>
+                <a href="list.html">Cothes rail</a>
               </li>
               <li class="itemConImg">
-                <a href="javascript:;">
+                <a href="list.html">
                   <img src="img/index/itemcon5.jpg" alt="">
                   <span>view details</span>
                   <div class="mask"></div>
                 </a>
               </li>
               <li class="itemConImg">
-                <a href="javascript:;">
+                <a href="list.html">
                   <img src="img/index/itemcon9.jpg" alt="">
                   <span>view details</span>
                   <div class="mask"></div>
                 </a>
               </li>
               <li class="itemConImg">
-                <a href="javascript:;">
+                <a href="list.html">
                   <img src="img/index/itemcon4.jpg" alt="">
                   <span>view details</span>
                   <div class="mask"></div>
@@ -210,29 +209,29 @@
             </ul>
           </li>
           <li class="navItem navSmall">
-            <a class="text" href="javascript:;">LIFE STYLE</a>
+            <a class="text" href="list.html">LIFE STYLE</a>
             <div class="smallList">
-              <a href="">Modern</a>
-              <a href="">Simple</a>
-              <a href="">Country</a>
-              <a href="">American</a>
-              <a href="">Cozy</a>
+              <a href="list.html">Modern</a>
+              <a href="list.html">Simple</a>
+              <a href="list.html">Country</a>
+              <a href="list.html">American</a>
+              <a href="list.html">Cozy</a>
             </div>
           </li>
           <li class="navItem">
-            <a class="text" href="javascript:;">SERIES</a>
+            <a class="text" href="list.html">SERIES</a>
           </li>
           <li class="navItem">
-            <a class="text" href="javascript:;">EVENT</a>
+            <a class="text" href="list.html">EVENT</a>
           </li>
           <li class="navItem">
-            <a class="text" href="javascript:;">COMMUNITY</a>
+            <a class="text" href="list.html">COMMUNITY</a>
           </li>
         </ul>
       </nav>
       <!--登录注册-->
       <div class="tapWrap">
-        <img src="img/index/banner1.jpg" alt="">
+        <img src="img/login/banner1.jpg" alt="">
           <div class="form">
               <ul class="tab-group ">
                 <li class="tab active"><a href="#signup">Sign Up</a></li>
@@ -286,10 +285,10 @@
                   </div>
                   <div class="field-wrap">
                     <label>
-                      Cell Phone Number<span class="req">*<strong id='str4'></strong></span>
+                      Cell Phone Number<span class="req">*<strong class='str4'></strong></span>
                     </label>
                     <input type="text" name="phone"  onblur="checkPhone()" required autocomplete="off"/>
-                    <strong id='str4'></strong>
+                    <strong class='str4'></strong>
                     <p id='tel'></p>
                   </div>
                   <button type="submit" class="button button-block"/>Sign in</button>
@@ -297,7 +296,7 @@
                 </div>
                 <div id="login">   
                   <h1>Welcome Back!</h1>
-                  <form action="/" method="post" class ="from1">
+                  <form action="index.html" method="post" class ="from1">
                     <div class="field-wrap">
                     <label>
                       Email Address<span class="req">*</span>
@@ -362,15 +361,13 @@
 
 
 </body>
-<script src="js/iconfont/jquery.min.js"></script>
-<script src="js/iconfont/swiper.min.js"></script>
-<script src="js/iconfont/banner.js"></script>
-<script src="js/tap.js"></script>
-<script src="js/index.js"></script>
+<script src="js/login/iconfont/jquery.min.js"></script>
+<script src="js/login/iconfont/swiper.min.js"></script>
+<script src="js/login/iconfont/banner.js"></script>
+<script src="js/login/tap.js"></script>
+<script src="js/login/index.js"></script>
 <script>
   $(function(){
-    /*调用banner的js*/
-    banner();
     /*回到顶部*/
     toTop();
     function toTop(){
@@ -392,12 +389,6 @@
       }
     })
   });
-
-
-
-
-
-    
 
 </script>
 </html>
