修改ljy代码bug和跳转

--- a/details.html
+++ b/details.html
@@ -14,9 +14,9 @@
       <header class="headerWrap">
         <div class="header">
           <div class="headerLeft">
-            <a href="list.html"><img src="img/index/facebook.png" alt=""></a>
-            <a href="list.html"><img src="img/index/instagram.png" alt=""></a>
-            <a href="list.html"><img src="img/index/twitter.png" alt=""></a>
+            <a href="javascript:;"><img src="img/index/facebook.png" alt=""></a>
+            <a href="javascript:;"><img src="img/index/instagram.png" alt=""></a>
+            <a href="javascript:;"><img src="img/index/twitter.png" alt=""></a>
           </div>
           <h1 class="logo">
             <a href="index.html">
@@ -26,9 +26,9 @@
           <div class="headerRight">
             <ul class="register">
               <li><a class="iconfont icon-gerenzhongxin-xuanzhong" href="myPage.html"></a></li>
-              <li><a class="iconfont icon-zhuce" href="list.html"></a></li>
-              <li><a class="iconfont icon-xianchangren" href="list.html"></a></li>
-              <li><a class="iconfont icon-gouwuche" href="list.html"></a></li>
+              <li><a class="iconfont icon-zhuce" href="javascript:;"></a></li>
+              <li><a class="iconfont icon-xianchangren" href="javascript:;"></a></li>
+              <li><a class="iconfont icon-gouwuche" href="javascript:;"></a></li>
             </ul>
             <div class="search_input">
               <i class="fa fa-search" id="i-advanced-search-i"></i>
