--- a/hui.html
+++ b/hui.html
@@ -17,9 +17,9 @@
       <header class="headerWrap">
         <div class="header">
           <div class="headerLeft">
-            <a href="list.html"><img src="img/index/facebook.png" alt=""></a>
-            <a href="list.html"><img src="img/index/instagram.png" alt=""></a>
-            <a href="list.html"><img src="img/index/twitter.png" alt=""></a>
+            <a href="javascript:;"><img src="img/index/facebook.png" alt=""></a>
+            <a href="javascript:;"><img src="img/index/instagram.png" alt=""></a>
+            <a href="javascript:;"><img src="img/index/twitter.png" alt=""></a>
           </div>
           <h1 class="logo">
             <a href="index.html">
@@ -29,9 +29,9 @@
           <div class="headerRight">
             <ul class="register">
               <li><a class="iconfont icon-gerenzhongxin-xuanzhong" href="myPage.html"></a></li>
-              <li><a class="iconfont icon-zhuce" href="list.html"></a></li>
-              <li><a class="iconfont icon-xianchangren" href="list.html"></a></li>
-              <li><a class="iconfont icon-gouwuche" href="list.html"></a></li>
+              <li><a class="iconfont icon-zhuce" href="javascript:;"></a></li>
+              <li><a class="iconfont icon-xianchangren" href="javascript:;"></a></li>
+              <li><a class="iconfont icon-gouwuche" href="javascript:;"></a></li>
             </ul>
             <div class="search_input">
               <i class="fa fa-search" id="i-advanced-search-i"></i>
@@ -341,7 +341,7 @@
       <nav class="fixedNavWrap">
         <div class="fixedNav">
           <ul class="fixedNavListLeft">
-            <li><a class="iconfont icon-zhuye" href="javascript:;"></a></li>
+            <li><a class="iconfont icon-zhuye" href="myPage.html"></a></li>
             <li><a href="javascript:;">LIVING ROOM</a></li>
             <li><a href="javascript:;">BED ROOM</a></li>
             <li><a href="javascript:;">KITCHEN</a></li>
